bpo-33454: Fix arguments parsing in _xxsubinterpreters.channel_close(). (GH-6747)